Portfolio/src/App.css
.project-card {
  width: 500px;
  margin: 40 px auto;
  padding: 20px;
  boarder: 1px solid #365352;
  boarder-radius: 10px;
  background-color: rgb(183, 201, 201);
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  font-family: Arial, Helvetica, sans-serif; 
}
<!-- hitta färger och format jag vill ha -->

.project-card img {
  width: 100%;
  height: auto;
  border-radius: 10px;
}

.project-card h2 {
  margin-top: 20px;
  font-size: 24px;
  color: #360f0f;
}

.project-card p {
  margin-top: 10px;
  font-size: 16px;
  color: #6e2525;
}

.project-card a {
  display: inline-block;
  margin-top: 15px;
  padding: 10px 20px;
  background-color: #007bff;
  color: white;
  text-decoration: none;
  border-radius: 5px;
}

.project-card a:hover {
  background-color: #0056b3;
}

